project : remove logs Co-authored-by: AmiraliPak <AmiraliPak@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "user.h": "c",
-        "limits": "c"
+        "limits": "c",
+        "defs.h": "c"
     }
 }
